-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.4, 5.13
-
-
15f34fb479567dc728fedf3ab2d13a86bf421c59 (qt/qtwebengine/5.13) 99b27e9654bcaf6af0719e33989ba0c956af1c3c (qt/qtwebengine/5.12)
When Qt is used in a 3rd party plugin to Photoshop then it will not start any webengine related things correctly. This is due to the fact that kBootstrapName in src/3rdparty/chromium/content/browser/mach_broker_mac.mm is duplicating the name used by Photoshop's own Chromium version.
If this name is changed to something else then it works fine.
For Gerrit Dashboard: QTBUG-77938 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
272703,2 | [macOS] Rename Chromium bootstrap name to prevent collisions | 69-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
272724,2 | Update Chromium | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |
272766,2 | [macOS] Rename Chromium bootstrap name to prevent collisions | 73-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
272767,8 | Update Chromium | 5.13 | qt/qtwebengine | Status: MERGED | +2 | 0 |
273305,1 | Update Chromium | 5.12 | qt/qtwebengine | Status: ABANDONED | 0 | 0 |