[macOS] Rename Chromium bootstrap name to prevent collisions

In macOS applications that embed another version of Chromium or CEF,
the names of our and the other Chromium's bootstrap service collide.
This will make whichever instance comes second not work properly.

Task-number: QTBUG-77938
Change-Id: If0169c16f365692df5fe80a5de0d9f3ce78d6687
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>