chromium/content/browser/mach_broker_mac.mm
@@ -16,7 +16,7 @@
 namespace content {
 
 namespace {
-const char kBootstrapName[] = "rohitfork";
+const char kBootstrapName[] = "qtrohitfork";
 }
 
 // static
