chromium/content/common/content_constants_internal.cc
@@ -34,7 +34,7 @@ const int kTraceEventRendererMainThreadSortIndex = -1;
 const char kDoNotTrackHeader[] = "DNT";
 
 #if defined(OS_MACOSX)
-const char kMachBootstrapName[] = "rohitfork";
+const char kMachBootstrapName[] = "qtrohitfork";
 #endif
 
 } // namespace content
